content/influxdb/v0.13/query_language/math_operators.md
---
title: Mathematical Operators

menu:
  influxdb_013:
    weight: 70
    parent: query_language
---

Mathematical operators follow the standard order of operations.
That is, *parentheses* take precedence to *division* and *multiplication*, which takes precedence to *addition* and *substraction*.
For example `5 / 2 + 3 * 2 =  (5 / 2) + (3 * 2)` and `5 + 2 * 3 - 2 = 5 + (2 * 3) - 2`.

## Supported Operators

### Addition

You can add a constant.

```sql
SELECT A + 5 FROM add
```
```sql
SELECT * FROM add WHERE A + 5 > 10
```

You can add together other field keys.

```sql
SELECT A + B FROM add
```
```sql
SELECT * FROM add WHERE A + B >= 10
```

### Subtraction

You can subtract a constant.

```sql
SELECT 1 - A FROM sub
```
```sql
SELECT * FROM sub WHERE 1 - A <= 3
```

You can subtract one field key from another field key.

```sql
SELECT A - B FROM sub
```
```sql
SELECT * FROM sub WHERE A - B <= 1
```

### Multiplication

You can multiply by a constant.

```sql
SELECT 10 * A FROM mult
```
```sql
SELECT * FROM mult WHERE A * 10 >= 20
```

You can multiply by other field keys.

```sql
SELECT A * B * C FROM mult
```
```sql
SELECT * FROM mult WHERE A * B <= 80
```

Multiplication distributes across other operators

```sql
SELECT 10 * (A + B + C) FROM mult
```

```sql
SELECT 10 * (A - B - C) FROM mult
```

```sql
SELECT 10 * (A + B - C) FROM mult
```

### Division
You can divide by a constant.

```sql
SELECT 10 / A FROM div
```
```sql
SELECT * FROM div WHERE A / 10 <= 2
```

You can divide by other field keys.

```sql
SELECT A / B FROM div
```
```sql
SELECT * FROM div WHERE A / B >= 10
```

Division distributes across other operators

```sql
SELECT 10 / (A + B + C) FROM mult
```

## Operators with Functions

The use of mathematical operators inside of function calls is currently unsupported.
Note that InfluxDB only allows functions in the `SELECT` clause.

For example

```sql
SELECT 10 * mean(value) FROM cpu
```
will work, however
```sql
SELECT mean(10 * value) FROM cpu
```
will yield a parse error.

## Unsupported Operators

### Inequalities

Using any of `=`,`!=`,`<`,`>`,`<=`,`>=`,`<>` in the `SELECT` clause yields empty results for all types.
See GitHub issue [3525](https://github.com/influxdb/influxdb/issues/3525).

### Miscellaneous

Using any of `%`, `^` will yield a parse error.
If you would like to see support for these operators open an [issue](https://github.com/influxdb/influxdb/issues/new).

## Logical Operators are Unsupported

Using any of `&`,`|`,`!|`,`NAND`,`XOR`,`NOR` will yield parse error.

Additionally using `AND`, `OR` in the `SELECT` clause of a query will not behave as mathematical operators and simply yield empty results, as they are tokens in InfluxQL.
